--- a/src/Eve-O Multiview/Eve-O Multiview.csproj
+++ b/src/Eve-O Multiview/Eve-O Multiview.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EveOPreview</RootNamespace>
-    <AssemblyName>EVE-O Preview</AssemblyName>
+    <AssemblyName>EVE-O Multiview</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
